apps/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-world
  name: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: hashicorp/http-echo
        args:
          - "-text=hello world"      
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world
  name: hello-world
spec:
  selector:
    app: hello-world
  ports:
    - port: 5678 # Default port for hashicorp image
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  annotations:            
    cert-manager.io/issuer: letsencrypt
    #nginx.ingress.kubernetes.io/auth-url: "https://oauth.snappypreview.com/oauth2/auth"
    #nginx.ingress.kubernetes.io/auth-signin: "https://oauth.snappypreview.com/oauth2/start?rd=$scheme://$best_http_host$request_uri"
    #nginx.ingress.kubernetes.io/auth-response-headers: "x-auth-request-user, x-auth-request-email, x-auth-request-access-token"
    #acme.cert-manager.io/http01-edit-in-place: "true"
    #nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  ingressClassName: nginx
  rules:
  - host: example.snappypreview.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hello-world
              port: 
                number: 5678
  tls:
  - hosts:
    - example.snappypreview.com
    secretName: cert-app
